# ethereum-protocol-specs

./: CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  ruff.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: index.md
scripts/: README.md  setup.py
src/example/: types.py  validation.py
src/specs/: README.md
src/subspecs/: README.md
tests/: conftest.py
tests/example/: test_types.py  test_validation.py
